--- a/Ocelot/Meta/Test/Static/index.html
+++ b/Ocelot/Meta/Test/Static/index.html
@@ -1,1 +1,17 @@
-EXAMPLE
+<!DOCTYPE html>
+<title>Some example page</title>
+<head>
+   <style>
+      * {
+         font-family: Arial, sans-serif;
+      }
+   </style>
+</head>
+<body>
+   <h1>EXAMPLE</h1>
+   <hr />
+   <form method="POST" action="/submit">
+      <input type="text" name="something" />
+      <input type="submit" x-text="Submit" />
+   </form>
+</body>
